# safe-ssh-server-setup

./: README.md  pyproject.toml
safe_ssh_setup/: __main__.py  app.py  disable.py  distro.py  executor.py  models.py  rollback.py  sudo.py
safe_ssh_setup/screens/: apply.py  auto_updates.py  base.py  fail2ban.py  firewall.py  intrusion_detection.py  port_knocking.py  review.py  ssh_hardening.py  ssh_key.py  ssh_port.py  summary.py  welcome.py
safe_ssh_setup/styles/: app.tcss
safe_ssh_setup/templates/: dnf_automatic.j2  fail2ban_jail.j2  knockd.j2  sshd_config.j2  unattended_upgrades.j2
safe_ssh_setup/widgets/: __init__.py  diff_view.py  nav_bar.py  step_indicator.py
tests/: test_distro.py  test_models.py  test_templates.py
