[project]
name = "safe-ssh-setup"
version = "0.1.0"
description = "TUI wizard for hardening SSH servers"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "jinja2>=3.1",
]

[project.scripts]
safe-ssh-setup = "safe_ssh_setup.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
